@@ -22,6 +22,7 @@
         - Add associates() method to state objects.
         - Add minimize() method to views.
         - Add "setWidget" action for plugin registration.
+        - Add clear() method to state objects.
 
         WARNING: If you relied on the former default API endpoint
           being http://localhost:9999/, this will break your
